Working on pset q4

--- a/pset/pset 01 - Water usage/pset01-Water-usage.Rmd
+++ b/pset/pset 01 - Water usage/pset01-Water-usage.Rmd
@@ -158,7 +158,8 @@ title = "Grid Plot of Crop-Source Combo"
 g <- ggplot(df_grid,
             aes(x = Source,
                 y = Crop,
-                fill = value))
+                fill = ))
+g
 
 ```
 
