--- a/pset/pset 01 - Water usage/pset01-Water-usage-solutions.Rmd
+++ b/pset/pset 01 - Water usage/pset01-Water-usage-solutions.Rmd
@@ -65,7 +65,7 @@ for(s in sources){
     head(df)
     ## end of reading data 
     
-    ## Tranform data #######################################
+    ## Transform data #######################################
     ## Use `pivot_longer`, `separate`, and/or other functions to transform this
     ## data frame into a data frame with 5 columns: 
     ## GEOID, crop, source, year, and value (indicating km^3 of water)
@@ -119,6 +119,7 @@ dd = d %>%
   ungroup()
 head(dd)  
 ```
+
 
 ## 3. Convert Table 2 to a visualization
 
