--- a/pset/pset 01 - Water usage/pset01-Water-usage.Rmd
+++ b/pset/pset 01 - Water usage/pset01-Water-usage.Rmd
@@ -12,6 +12,9 @@ knitr::opts_chunk$set(echo = TRUE)
 
 library(tidyverse)
 library(pubtheme)
+library(ggplot2)
+library(ggmosaic)
+library(dplyr)
 ```
 
 ## Introduction 
@@ -57,7 +60,7 @@ for(s in sources){
   for(year in years){
     cat(year, '') ## show progress
   
-    ## 
+    ## read in the raw data into a dataframe
     filename = paste0('rawdata/', s, '_', year, '.csv')
     df = read.csv(filename)
     head(df)
@@ -68,13 +71,16 @@ for(s in sources){
     ## data frame into a data frame with 5 columns: 
     ## GEOID, crop, source, year, and value (indicating km^3 of water)
     
-    
+    df = df %>%
+      pivot_longer(cols = -GEOID, names_to = 'crop', values_to = 'value') %>%
+      separate(col = crop, into = c('src', 'crop', 'year'), sep = '[.]', fill = 'right') %>%
+      relocate(GEOID, crop, src, year, value)
     
     
     
     ## end of transforming data ############################
     
-    ## 
+    ## add the df we just made to our aggregate dataframe d
     d = rbind(d, df)
   }
   
@@ -102,18 +108,68 @@ Find the **annual** mean **water usage**, the change from 2008 to 2020, and the 
 ```{r}
 dd1 = d %>%
   group_by(crop, src, year) %>%
-  summarize(value = sum(value))
+  summarise(value = sum(value)) ## sum not mean
 dd1
 
 dd2 = dd1 %>%
   group_by(crop, src) %>%
-  summarize(mean = mean(value))
+  mutate(mean = mean(value))
+
 dd2
+
+dd3 = dd2 %>%
+  pivot_wider(names_from = year, values_from = value) %>%
+  mutate(change = `2020` - `2008`,
+         percent_change = change / `2008` * 100) %>%
+  relocate(crop, src, mean, change, percent_change)
+
+dd3
 ```
 
 ## 3. Convert Table 2 to a visualization
 
 Create a visual representation of the information in Table 2. Create a visualization (or visualizations) that contains mean, change, and percent change in water usage from each crop and source. 
+
+```{r}
+g = ggplot(dd3, 
+           aes(x = mean, 
+               y = crop,
+               label = crop,
+               fill = src)) +
+  geom_col(width = 0.8, 
+           position = position_dodge(width = 0.8)) + 
+  labs(title = "Mean Water Usage by Crop and Source",
+       x = "Mean Water Usage",
+       y = "Crop")
+g %>% 
+  pub(type = 'hist')
+
+g = ggplot(dd3, 
+           aes(x = change, 
+               y = crop,
+               label = crop,
+               fill = src)) +
+  geom_col(width = 0.8, 
+           position = position_dodge(width = 0.8)) + 
+  labs(title = "Change in Water Usage by Crop and Source",
+       x = "Change in Water Usage",
+       y = "Crop")
+g %>% 
+  pub(type = 'hist')
+
+g = ggplot(dd3, 
+           aes(x = percent_change, 
+               y = crop,
+               label = crop,
+               fill = src)) +
+  geom_col(width = 0.8, 
+           position = position_dodge(width = 0.8)) + 
+  labs(title = "Percent Change in Water Usage by Crop and Source",
+       x = "Percent Change in Water Usage",
+       y = "Crop")
+g %>% 
+  pub(type = 'hist')
+```
 
 
 # Figure 4
@@ -130,20 +186,58 @@ Two other options for visualizing a numeric variable broken down by two differen
 
 ```{r}
 
+title = "Average irragation water usage by crop and source"
+g = ggplot(dd3, 
+           aes(x    = crop, 
+               y    = src, 
+               fill = mean, 
+               alpha = '')) + ## hacky way to add a legend for NA values. See below
+  geom_tile(linewidth   = 0.4, 
+            show.legend = T, 
+            color       = pubdarkgray) +
+  scale_fill_gradient(low      = publightgray,
+                      high     = pubblue, 
+                      na.value = pubdarkgray, ## same color as below
+                      oob      = squish 
+                      ) +
+  
+  ## hacky way to add a legend for NA values
+  scale_alpha_manual(values = NA) +              
+  guides(alpha = guide_legend(
+    title = "No data",
+    override.aes = list(fill = pubdarkgray))) + ## same color as above
+    
+  labs(title    = title,
+       x    = 'Crop', 
+       y    = NULL, ## Optional
+       fill = 'Mean') 
+
+g %>% 
+  pub(type    = 'grid')
+
+
 ```
 
 ## 5. Create a mosiac plot of the data in Figure 4. 
 
 ```{r}
+dd3 %>% 
+  ggplot() + 
+  geom_mosaic(aes(x = product(crop), 
+                  fill = src, 
+                  weight = mean)) + 
+  theme_mosaic()
 
 ```
 
 ## 6. What are the benefits (other than it fits on one plot) and drawbacks of these two plots?
 
+Some of the benefits of these two plots are that 
 
 ## 7. Figure 6 
 
 Figure 6 uses a different color scale for each plot. Discuss the benefits and drawbacks of this choice. What was the main purposes of this figure? Given the main purpose, would you recommend using the same color scale, or different color scales, for each plot?
+
 
 
 
