--- a/pset/pset 00 - Intro and Software Installation/pset00-Github-pull-request-Andrew-Coli.Rmd
+++ b/pset/pset 00 - Intro and Software Installation/pset00-Github-pull-request-Andrew-Coli.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "HW 0, Question 9"
-author: "Brian Macdonald"
-date: 'Jan 15, 2024'
+author: "Andrew Coli"
+date: 'Jan 30, 2024'
 output: html_document
 ---
 
